# cpp-course

cpp-course/BigInteger/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp  main.cpp  vector.h  vector.hpp
cpp-course/Huffman/: CMakeLists.txt  huffman_testing.cpp  main.cpp
cpp-course/Huffman/gtest/: gtest_main.cc
cpp-course/Huffman/lib/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  library.cpp  library.h
cpp-course/fixed_vector/: CMakeLists.txt  FixedVector.h  base_vector.h  fixed_vector.h  vector_tests.cpp
